--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,7 @@ packages = find:
 include_package_data = True
 install_requires =
     lark-parser
+    prompt_toolkit>=2.0
 setup_requires =
 	setuptools>=39.0
 	pytest-runner>=2.0
