--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,7 @@ classifiers =
 	Programming Language :: Python :: 3.6
 license = NA
 long_description = file: README.md
+long_description_content_type = text/markdown
 url = https://github.com/autochthe/kismet-py
 
 [options]
