--- a/setup.cfg
+++ b/setup.cfg
@@ -33,10 +33,11 @@ packages = find:
 include_package_data = True
 install_requires =
     lark-parser
-    torch
     numpy
-    pyro-ppl
     prompt_toolkit>=2.0
+    pyro-ppl
+    regex
+    torch
 setup_requires =
 	setuptools>=39.0
 	pytest-runner>=2.0
