--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,7 @@ url = https://github.com/autochthe/kismet-py
 [options]
 packages = find:
 include_package_data = True
+python_requires = '>=3.6,<3.7'
 install_requires =
     lark-parser
     numpy
@@ -38,6 +39,7 @@ install_requires =
     pyro-ppl
     regex
     torch
+    discord.py
 setup_requires =
 	setuptools>=39.0
 	pytest-runner>=2.0
