Point to correct path

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ tag = True
 commit = True
 
 # YOUR PACKAGE NAME IN PLACE OF 'module_template' HERE:
-[bumpversion:file:kismet-py/__init__.py]
+[bumpversion:file:kismet/__init__.py]
 [bumpversion:file:version.txt]
 
 [aliases]
