--- a/setup.cfg
+++ b/setup.cfg
@@ -30,7 +30,7 @@ url = https://github.com/autochthe/kismet-py
 [options]
 packages = find:
 include_package_data = True
-python_requires = 3.6
+python_requires = >=3.6,<3.7
 install_requires = 
 	discord.py
 	lark-parser
