--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,7 @@ python_requires = >=3.6,<3.7
 install_requires = 
     discord.py
     ipython>=7
+    jupyterlab
     lark-parser
     numpy
     prompt_toolkit
