--- a/docker/build
+++ b/docker/build
@@ -5,8 +5,10 @@ cd "$(dirname "$0")"
 cd ..
 
 
+docker pull continuumio/miniconda3
 docker build -t autochthe/kismet.base -f docker/kismet.base.dockerfile "$@" .
 
 docker build -t autochthe/kismet -f docker/kismet.dockerfile .
 docker build -t autochthe/kismet.discord -f docker/kismet.discord.dockerfile .
 docker build -t autochthe/kismet.jupyter -f docker/kismet.jupyter.dockerfile .
+docker build -t autochthe/kismet.jupyter.vim -f docker/kismet.jupyter.vim.dockerfile .
