Add version to setup.py

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,8 @@ commit = True
 
 [bumpversion:file:version.txt]
 
+[bumpversion:file:setup.py]
+
 [aliases]
 test = pytest
 
@@ -16,7 +18,6 @@ python_files = tests/test*.py
 
 [metadata]
 name = kismet
-version = file: version.txt
 author = Mara Kim
 author_email = mara@autochthe.net
 classifiers = 
