Add Slack and modularize

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,16 +31,19 @@ url = https://github.com/autochthe/kismet-py
 [options]
 packages = find:
 include_package_data = True
-python_requires = >=3.6,<3.7
+python_requires = >=3.7,<3.8
 install_requires = 
+    # BEGIN STOPGAP
+    aiohttp>3.5.2,<3.6.0
+    # END STOPGAP
 	discord.py
 	ipython>=7
 	jupyterlab
 	lark-parser
 	numpy
 	prompt_toolkit
-	pyro-ppl
 	regex
+    slackclient
 	torch
 setup_requires = 
 	setuptools>=39.0
