--- a/setup.cfg
+++ b/setup.cfg
@@ -31,9 +31,9 @@ url = https://github.com/autochthe/kismet-py
 [options]
 packages = find:
 include_package_data = True
-python_requires = >=3.7,<3.8
+python_requires = >=3.8,<3.9
 install_requires = 
-	aiohttp>3.5.2,<3.6.0
+	aiohttp
 	discord.py
 	ipython>=7
 	jupyterlab
