--- a/k8s/kismet-py/templates/kismet.secrets.yaml
+++ b/k8s/kismet-py/templates/kismet.secrets.yaml
@@ -1,16 +1,7 @@
-apiVersion: secrets-store.csi.x-k8s.io/v1
-kind: SecretProviderClass
+apiVersion: v1
+kind: Secret
 metadata:
-  name: azure-keyvault
-spec:
-  provider: azure
-  parameters:
-    tenantId: {{ .Values.tenantId }}
-    useVMManagedIdentity: "true"
-    userAssignedIdentityID: {{ .Values.clientId }}
-    keyvaultName: Kismet-py
-    objects: |
-      array:
-        - |
-          objectName: Kismet-env
-          objectType: secret
+  name: kismet-secret
+data:
+  discord_clientid: {{ .Values.discord_clientid | toString | b64enc }}
+  discord_token: {{ .Values.discord_token | toString | b64enc }}
