--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -3,4 +3,5 @@ current_version = 0.9.0
 commit = True
 
 [bumpversion:file:k8s/helm/Chart.yaml]
+[bumpversion:file:python/pyproject.toml]
 [bumpversion:file:python/src/kismet/__init__.py]
